curl-with-ambassador.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-with-ambassador
spec:
  containers:
    - name: main
      image: curlimages/curl
      command: ["sleep", "999999"]
    - name: ambassador
      image: luksa/kubectl-proxy:1.6.2
