fortune-pod-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-env
spec:
  containers:
    - image: luksa/fortune:env
      name: html-generator
