kubia-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-pv
spec:
  clusterIP: None
  selector:
    app: kubia
  ports:
    - name: http
      port: 80
